--- a/.simulation/intro_trySimulation_xaringan.html
+++ b/.simulation/intro_trySimulation_xaringan.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>R로 package 만들어서 Simulation 하기</title>
+    <title>intro_trySimulation_xaringan.utf8</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Sooyong Lee The University of Texas at Austin Educational Psychology" />
-    <meta name="date" content="2021-03-12" />
     <link href="intro_trySimulation_xaringan_files/remark-css-0.0.1/default.css" rel="stylesheet" />
-    <link href="intro_trySimulation_xaringan_files/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/xaringan-themer.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
-class: center, middle, inverse, title-slide
-
-# R로 package 만들어서 Simulation 하기
-### Sooyong Lee<br><span style="font-size: 50%;">The University of Texas at Austin<br>Educational Psychology</span>
-### 2021-03-12
-
----
 
 
 
---- 
-# Introduce yourself!
+class: center, middle, title-slide
 
-&gt; My name is Alison and I am a Data Scientist &amp; Professional Educator at RStudio. I live in Portland, Oregon with my husband, daughter, and our sourdough starter.
+&lt;span style = 'font-size: 200%;'&gt;R로 package 만들어서 Simulation&lt;/span&gt;
+
+&lt;br&gt;
+&lt;br&gt;
+
+2021-03-12
+
+&lt;br&gt;
+&lt;br&gt;
+
+Sooyong Lee&lt;br&gt;&lt;br&gt;&lt;span style = 'font-size: 100%;'&gt;Educational Psychology&lt;br&gt;&lt;br&gt;The University of Texas at Austin&lt;/span&gt;
 
 ---
 
@@ -96,8 +96,7 @@ plot(c(1:10))
 "highlightStyle": "github",
 "highlightLines": true,
 "countIncrementalSlides": false,
-"seal": false,
-"ratio": "16:9"
+"ratio": "3:2"
 });
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
   window.dispatchEvent(new Event('resize'));
