--- a/.simulation/intro_trySimulation.html
+++ b/.simulation/intro_trySimulation.html
@@ -3169,7 +3169,7 @@ slide:not(.current) .plotly.html-widget{
         
   </style>
 
-  <style type="text/css">.prettyprint .com {color: green;font-style: italic;}.prettyprint .lit {color: black;}.prettyprint .pun,.prettyprint .opn,.prettyprint .clo {color: red;}.prettyprint .pln {color: blue;}pre {font-family: 'Source Code Pro', 'Courier New', monospace;font-size: 20px;color: black;line-height: 28px;letter-spacing: -1px;margin-bottom: 20px;width: 100%; left: 0; padding: 10px 15px 10px 15px; position: relative;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;}slides > slide {overflow-x: auto !important;overflow-y: auto !important;}</style>
+  <style type="text/css">.prettyprint .com {color: green;font-style: italic;}.prettyprint .lit {color: black;}.prettyprint .pun,.prettyprint .opn,.prettyprint .clo {color: red;}.prettyprint .pln {color: blue;}pre {font-family: 'Source Code Pro', 'Courier New', monospace;font-size: 20px;color: black;line-height: 28px;letter-spacing: -1px;margin-bottom: 20px;width: 100%; left: 0; padding: 10px 15px 10px 15px; position: relative;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;}slides > slide {overflow-x: auto !important;overflow-y: auto !important;}body {font-family: Roboto Condensed;font-weight: normal;color: #000000;}.remark-slide-content {background-color: #FFFFFF;font-size: 20px;padding: 1em 4em 1em 4em;}.remark-slide-content h1 {font-size: 55px;}.remark-slide-content h2 {font-size: 45px;}.remark-slide-content h3 {font-size: 35px;}</style>
 
 </head>
 
@@ -3356,22 +3356,22 @@ g.data &lt;- MASS::mvrnorm(N, mean_vector, Sigma = model_impled)
 g.data &lt;- data.frame(g.data)
 head(g.data, 5)</pre>
 
-<pre >##             X1         X2          X3         X4         X5         X6
-## 1 -0.677516305 -0.4997271  0.09246592 -0.2895537  0.9040676  1.7880555
-## 2  0.057817483  1.4937529 -0.51565172  0.3077930  0.3920688  0.8293865
-## 3  0.009879011 -0.7018582  1.17571347  1.6836077  0.1508125  1.4540119
-## 4 -2.192793566 -1.8798828 -1.81199748 -0.0754489 -1.0973677 -1.1513531
-## 5 -0.930018319 -0.4823235  0.24263012  0.9681069 -0.2451244 -0.4387866</pre>
+<pre >##            X1          X2         X3         X4         X5         X6
+## 1 -0.81129008  0.04363042 -0.5369912 -0.7067367 -1.0646172 -0.6204529
+## 2 -1.37508407 -1.23384944  0.2488180 -0.0294155 -0.1253332 -0.4550078
+## 3  0.04901973 -0.11421779 -1.1990944  0.4378292 -1.6693137 -0.7708006
+## 4  0.09780838  0.27034080 -1.3754228  1.2341684  0.8929899  1.4399983
+## 5  1.61759780  2.04047198  0.5646242  0.9425925  0.7964997  0.3092977</pre>
 
 <pre class = 'prettyprint lang-r'>cov(g.data)</pre>
 
 <pre >##           X1        X2        X3        X4        X5        X6
-## X1 1.5806791 1.1062851 1.1632447 0.2524561 0.4202611 0.4676659
-## X2 1.1062851 1.5454165 1.1387609 0.2266632 0.4134242 0.4978783
-## X3 1.1632447 1.1387609 1.7558648 0.2278815 0.3994579 0.5164831
-## X4 0.2524561 0.2266632 0.2278815 1.0032762 0.7568121 0.7552677
-## X5 0.4202611 0.4134242 0.3994579 0.7568121 1.4242031 0.9694080
-## X6 0.4676659 0.4978783 0.5164831 0.7552677 0.9694080 1.3122889</pre>
+## X1 1.4611069 1.0020653 0.7353606 0.7374261 0.4071351 0.7828256
+## X2 1.0020653 1.5527895 0.8566110 0.5848781 0.4725043 0.5639972
+## X3 0.7353606 0.8566110 1.3589564 0.4382972 0.3890772 0.4444986
+## X4 0.7374261 0.5848781 0.4382972 1.5643692 0.8240910 1.0452453
+## X5 0.4071351 0.4725043 0.3890772 0.8240910 1.1122648 0.8740250
+## X6 0.7828256 0.5639972 0.4444986 1.0452453 0.8740250 1.5483190</pre>
 
 <pre class = 'prettyprint lang-r'>model_impled</pre>
 
@@ -3420,8 +3420,8 @@ head(g.data, 5)</pre>
 
 (x &lt;- .data[,1])</pre>
 
-<pre >##  [1] -0.014647063  0.232425110  0.014554312  2.084805811 -0.392199041
-##  [6] -0.398110451  0.333580242 -0.002977784  2.679285337  0.235188644</pre>
+<pre >##  [1] -1.20492391 -1.22099443  0.57418845  2.78170102 -1.57194385  1.65310948
+##  [7]  0.30929076  0.90541652 -0.02357711  1.22659300</pre>
 
 <pre class = 'prettyprint lang-r'>(cut_size &lt;- 5)</pre>
 
@@ -3429,7 +3429,7 @@ head(g.data, 5)</pre>
 
 <pre class = 'prettyprint lang-r'>cut(x = x, breaks = cut_size, labels = F)</pre>
 
-<pre >##  [1] 1 2 1 5 1 1 2 1 5 2</pre>
+<pre >##  [1] 1 1 3 5 1 4 3 3 2 4</pre>
 
 <pre class = 'prettyprint lang-r'>dataCut &lt;- function(.data, cut_size) {
 
