--- a/.simulation/intro_trySimulation_xaringan.html
+++ b/.simulation/intro_trySimulation_xaringan.html
@@ -11,49 +11,153 @@
 
 
 
-class: center, middle, title-slide
+class: title-slide, center, middle
 
-&lt;span style = 'font-size: 200%;'&gt;R로 package 만들어서 Simulation&lt;/span&gt;
+# R로 package 만들어서 Simulation
 
-&lt;br&gt;
-&lt;br&gt;
+## 2021-03-13
 
-2021-03-12
+Sooyong Lee | Educational Psychology | The University of Texas at Austin
 
-&lt;br&gt;
-&lt;br&gt;
+---
+class: contents
 
-Sooyong Lee&lt;br&gt;&lt;br&gt;&lt;span style = 'font-size: 100%;'&gt;Educational Psychology&lt;br&gt;&lt;br&gt;The University of Texas at Austin&lt;/span&gt;
+# Contents
+
+- 시뮬레이션을 위한 패키지 만들기기
+- git(hub)
+- 시뮬레이션 분석
+- 사용할 package
+  - tidyverse
+      * dplyr, tidyr, ggplot2, purrr, magrittr
+  - lavaan
 
 ---
 
-# Find me at...
-All the details...
+# Package for Simulation
+
+- 엄청 큰 장점은 없음
+- 같이 배우면 좋을 거 같음
+- 연구 보관이 용이함.
+  - 언제든지 다시 하거나, 수정하기 쉬움
+- 패키지 자체가 연구인 경우
 
 ---
-class: center, middle
+
+# Simulation
+
+- 시뮬레이션에 필요한 거
+  - 주제
+  - 시뮬레이션 조건 함수
+  - 데이터 생성 함수
+  - 분석 함수
+  - 정리 함수
+
+---
+
+## 주제
+
+연속형 변수를 범주화 해서 분석하면 얼마나 위험할까?
+
+&lt;img src="E:/git_folder/trySimulation/.simulation/model_fig.png" width="573" height="200%" style="display: block; margin: auto;" /&gt;
+
+---
+
+# 시뮬레이션 조건 함수
+
+.scroll-output[
 
 
-# Slide with centered content in the middle
-My name is Alison. I like hot toddies, `#rdogladies`, and babies.
+```r
+makeCondition &lt;- function(n_sample, cov_size, n_indi, cut_size, n_rep, 
+                          full = T) {
+  con_list &lt;-
+    crossing(n_sample, cov_size, n_indi, cut_size) %&gt;%
+    mutate(condition_number = row_number())
 
-hori:
-- left,
-- center, 
-- right
+  if(full)
+    con_list &lt;- 
+      crossing(con_list, n_rep = 1:n_rep) %&gt;% 
+      arrange(n_rep, condition_number)
 
-verti:
-- top, 
-- middle, 
-- bottom
+  return(con_list)
+}
+
+condition_list &lt;- 
+  makeCondition(
+    n_sample = c(100, 500), cov_size = c(0, 0.5), n_indi = c(3, 6), 
+    cut_size = c(3,5,7), n_rep = 5, full = F)
+
+makeCondition &lt;- function(n_sample, cov_size, n_indi, cut_size, n_rep, 
+                          full = T) {
+  con_list &lt;-
+    crossing(n_sample, cov_size, n_indi, cut_size) %&gt;%
+    mutate(condition_number = row_number())
+
+  if(full)
+    con_list &lt;- 
+      crossing(con_list, n_rep = 1:n_rep) %&gt;% 
+      arrange(n_rep, condition_number)
+
+  return(con_list)
+}
+
+condition_list &lt;- 
+  makeCondition(
+    n_sample = c(100, 500), cov_size = c(0, 0.5), n_indi = c(3, 6), 
+    cut_size = c(3,5,7), n_rep = 5, full = F)
+
+
+makeCondition &lt;- function(n_sample, cov_size, n_indi, cut_size, n_rep, 
+                          full = T) {
+  con_list &lt;-
+    crossing(n_sample, cov_size, n_indi, cut_size) %&gt;%
+    mutate(condition_number = row_number())
+
+  if(full)
+    con_list &lt;- 
+      crossing(con_list, n_rep = 1:n_rep) %&gt;% 
+      arrange(n_rep, condition_number)
+
+  return(con_list)
+}
+
+condition_list &lt;- 
+  makeCondition(
+    n_sample = c(100, 500), cov_size = c(0, 0.5), n_indi = c(3, 6), 
+    cut_size = c(3,5,7), n_rep = 5, full = F)
+
+
+condition_list
+```
+
+```
+## # A tibble: 24 x 5
+##    n_sample cov_size n_indi cut_size condition_number
+##       &lt;dbl&gt;    &lt;dbl&gt;  &lt;dbl&gt;    &lt;dbl&gt;            &lt;int&gt;
+##  1      100      0        3        3                1
+##  2      100      0        3        5                2
+##  3      100      0        3        7                3
+##  4      100      0        6        3                4
+##  5      100      0        6        5                5
+##  6      100      0        6        7                6
+##  7      100      0.5      3        3                7
+##  8      100      0.5      3        5                8
+##  9      100      0.5      3        7                9
+## 10      100      0.5      6        3               10
+## # ... with 14 more rows
+```
+
+]
+---
 
 ---
 class: center, middle 
 # Slide with some aligned text
 My name is Alison. I like hot toddies, `#rdogladies`,...
 .left[and babies.]
----
 
+---
 
 .pull-left[
 ...
@@ -84,7 +188,7 @@ plot(c(1:10))
 ```
 ]
 .pull-right[
-&lt;img src="intro_trySimulation_xaringan_files/figure-html/unnamed-chunk-1-1.png" width="576" /&gt;
+&lt;img src="intro_trySimulation_xaringan_files/figure-html/unnamed-chunk-3-1.png" width="576" /&gt;
 ]
 
 
