--- a/.simulation/intro_trySimulation_xaringan.html
+++ b/.simulation/intro_trySimulation_xaringan.html
@@ -3,11 +3,16 @@
   <head>
     <title>intro_trySimulation_xaringan.utf8</title>
     <meta charset="utf-8" />
+    <script src="intro_trySimulation_xaringan_files/header-attrs-2.7/header-attrs.js"></script>
     <link href="intro_trySimulation_xaringan_files/remark-css-0.0.1/default.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/xaringan-themer.css" type="text/css" />
+    <link href="intro_trySimulation_xaringan_files/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
   <body>
     <textarea id="source">
+
+
+
+
 
 
 
@@ -15,7 +20,7 @@ class: title-slide, center, middle
 
 # R로 package 만들어서 Simulation
 
-## 2021-03-13
+## 2021-04-01
 
 Sooyong Lee | Educational Psychology | The University of Texas at Austin
 
@@ -28,9 +33,9 @@ class: contents
 - git(hub)
 - 시뮬레이션 분석
 - 사용할 package
-  - tidyverse
-      * dplyr, tidyr, ggplot2, purrr, magrittr
-  - lavaan
+  - `tidyverse`
+      * `dplyr`, `tidyr`, `ggplot2`, `purrr`, `magrittr`
+  - `lavaan`
 
 ---
 
@@ -59,7 +64,7 @@ class: contents
 
 연속형 변수를 범주화 해서 분석하면 얼마나 위험할까?
 
-&lt;img src="E:/git_folder/trySimulation/.simulation/model_fig.png" width="573" height="200%" style="display: block; margin: auto;" /&gt;
+
 
 ---
 
@@ -149,6 +154,8 @@ condition_list
 ```
 
 ]
+---
+background-image: url(https://github.com/yihui/xaringan/releases/download/v0.0.2/karl-moustache.jpg)
 ---
 
 ---
