--- a/.report/xaringan_presentation.html
+++ b/.report/xaringan_presentation.html
@@ -22,7 +22,7 @@ class: title-slide, center, middle
 
 # Simulation Study with Package Development
 
-2021-05-07
+2021-05-11
 
 ### Sooyong Lee | Educational Psychology | The University of Texas at Austin
 
@@ -30,7 +30,7 @@ class: title-slide, center, middle
 
 # Contents
 
-- 시뮬레이션을 위한 패키지 만들기기
+- R package
 - git(hub)
 - 시뮬레이션 분석
 - 사용할 package
@@ -51,14 +51,35 @@ class: title-slide, center, middle
 
 ---
 
+# Package for Simulation
+
+- R project 생성
+  - file -&gt; new project ...
+- document 설정
+  - roxyzen2
+- 폴더 구조
+  - man, R / .Rbuildignore
+- install package
+
+---
+
+# git(hub)
+
+- git: code 관리 프로그램
+- github: code 업로드드
+- commit / push / pull
+
+---
+
 # Simulation Materials
 
-- 주제
-- 시뮬레이션 조건 함수
-- 데이터 생성 함수
-- 분석 함수
-- 정리 함수
-- 결과 정리 함수 (그래프 등)
+- study topic
+- population model
+- condition; 시뮬레이션 조건 함수
+- data generation; 데이터 생성 함수
+- analysis; 분석 함수
+- estimate cleaning; 정리 함수
+- report; 그래프, 표...
 
 ---
 
@@ -83,9 +104,47 @@ class: title-slide, center, middle
 
 # Population Model
 
-&lt;img src="C:/Users/sooyong/Documents/GitHub/trySimulation/.report/model_fig.png" width="100%" height="100%" style="display: block; margin: auto;" /&gt;
+.pull-left-wide[
+## Two factor CFA model
+
+&lt;img src="C:/Users/sooyong/Documents/GitHub/trySimulation/.report/model_fig.png" width="100%" height="100%" style="display: block; margin: auto auto auto 0;" /&gt;
+]
+
+.pull-right-narrow[
+
+## Covariance matrix
 
 `$$\Sigma = Cov(X) = \Lambda \Phi \Lambda^T + \Theta$$`
+
+```r
+theta &lt;- diag(0.5, 6)
+lambda &lt;- matrix(c(1,1,1,0,0,0,0,0,0,1,1,1), ncol = 2)
+pi &lt;- matrix(c(1,0.5, 0.5, 1), ncol = 2)
+
+lambda %*% pi %*% t(lambda) + theta
+```
+
+```
+##      [,1] [,2] [,3] [,4] [,5] [,6]
+## [1,]  1.5  1.0  1.0  0.5  0.5  0.5
+## [2,]  1.0  1.5  1.0  0.5  0.5  0.5
+## [3,]  1.0  1.0  1.5  0.5  0.5  0.5
+## [4,]  0.5  0.5  0.5  1.5  1.0  1.0
+## [5,]  0.5  0.5  0.5  1.0  1.5  1.0
+## [6,]  0.5  0.5  0.5  1.0  1.0  1.5
+```
+
+
+]
+
+
+---
+
+# github
+
+- git: 코드 관리 프로그램
+- github: 코드 저장소
+
 ---
 
 # Functions
@@ -93,6 +152,16 @@ class: title-slide, center, middle
 ## generate conditions 
 
 .panelset[
+.panel[.panel-name[condition]
+
+- sample size
+- number of indicators per factor
+- covaraince between factors: 0, 0.5
+  - cov = 0인 경우 유의하면 -&gt; type I error 
+  - cov = 0.5인 경우 유의하면 -&gt; power
+- all other things are fixed
+
+]
 
 .panel[.panel-name[function]
 
@@ -155,6 +224,33 @@ condition_list &lt;-
 ## generate data
 
 .panelset[
+
+.panel[.panel-name[data]
+
+- 조건에 맞게 `\(\Sigma\)` 가 생성해야야 함.
+
+`$$\Sigma = Cov(X) = \Lambda \Phi \Lambda^T + \Theta$$`
+
+```r
+theta &lt;- diag(0.5, 6)
+lambda &lt;- matrix(c(1,1,1,0,0,0,0,0,0,1,1,1), ncol = 2)
+pi &lt;- matrix(c(1,0.5, 0.5, 1), ncol = 2)
+
+lambda %*% pi %*% t(lambda) + theta
+```
+
+```
+##      [,1] [,2] [,3] [,4] [,5] [,6]
+## [1,]  1.5  1.0  1.0  0.5  0.5  0.5
+## [2,]  1.0  1.5  1.0  0.5  0.5  0.5
+## [3,]  1.0  1.0  1.5  0.5  0.5  0.5
+## [4,]  0.5  0.5  0.5  1.5  1.0  1.0
+## [5,]  0.5  0.5  0.5  1.0  1.5  1.0
+## [6,]  0.5  0.5  0.5  1.0  1.0  1.5
+```
+
+]
+
 .panel[.panel-name[function]
 
 .scroll-box-18[
@@ -204,16 +300,16 @@ gen.data &lt;- genData(
 
 ```
 ##             X1         X2         X3         X4         X5         X6
-## 1  -1.74275609 -1.3551059  0.3819419  1.9060961  1.1215857  1.1741083
-## 2  -0.32217304 -1.3854469 -0.8903905 -0.7886784 -1.4670183 -1.7913837
-## 3  -0.95481049 -0.1146301 -1.0137074 -2.9517540 -1.1525760 -2.5035783
-## 4  -1.48425389 -2.1185372 -1.1418366 -1.2782469 -1.3946831 -0.9820399
-## 5   2.82710601  2.0458642  1.3091590 -1.6518204 -1.1970918  0.1678453
-## 6  -2.12150379 -3.6415767 -1.2018569 -0.5024305 -0.4955800 -2.0520517
-## 7  -0.59650119  1.4432331 -0.9720923 -0.4763119 -1.4667018 -1.6373526
-## 8   1.25139824  0.6525596  1.5292821 -1.1297106 -0.5757805 -1.0778059
-## 9  -1.95003845 -1.4646149 -1.9371854  0.5235749  1.5676270  0.6331059
-## 10 -0.08166705 -1.5682252  0.4576604 -1.6686632 -2.2341184 -1.3031570
+## 1  -1.15995040  0.6468361 -0.8832153  0.3807807  1.6451707  0.9197737
+## 2   0.18816688 -0.1078065  0.9959542  1.2927440  1.9310336  1.9962483
+## 3  -1.31600329 -0.8948682  0.1893923  0.6258151  0.8017407 -1.0724220
+## 4   0.72800989  1.4418928  0.6792771  1.6040397  2.9024642  1.4655133
+## 5   0.04600095  1.6564772  1.3851438 -2.9140832 -3.2934137 -3.5065877
+## 6  -0.12104437 -1.3477056 -3.0475593  0.9225972  0.7946894 -1.0018327
+## 7  -1.24436658 -1.2519496 -1.5242425  1.4403905  0.8147981  1.3339256
+## 8   0.30987102  0.9383184  0.3050334  1.5638723  0.3181447  0.9924479
+## 9   1.61024481  0.7015246  0.3016287  0.1824937  1.5559882  0.7472920
+## 10  1.34074835  1.7059755  2.2038406 -0.1134718  1.4400222  1.3630104
 ```
 ]
 ]
@@ -259,30 +355,30 @@ cut3.data &lt;- dataCut(
 
 ```
 ##    X1 X2 X3 X4 X5 X6
-## 1   1  3  4  5  5  5
-## 2   2  2  2  3  2  1
-## 3   2  4  2  1  2  1
-## 4   1  2  2  2  2  3
-## 5   5  5  5  2  2  4
-## 6   1  1  2  3  3  1
-## 7   2  5  2  3  2  2
-## 8   4  4  5  2  3  2
-## 9   1  2  1  4  5  5
-## 10  3  2  4  2  1  2
+## 1   1  4  3  4  4  5
+## 2   3  3  4  5  5  5
+## 3   1  1  4  4  4  3
+## 4   4  5  4  5  5  5
+## 5   3  5  5  1  1  1
+## 6   3  1  1  5  4  3
+## 7   1  1  2  5  4  5
+## 8   3  4  4  5  3  5
+## 9   5  4  4  4  4  4
+## 10  5  5  5  4  4  5
 ```
 
 ```
 ##    X1 X2 X3 X4 X5 X6
-## 1   1  2  3  3  3  3
-## 2   2  2  1  2  1  1
-## 3   1  2  1  1  1  1
-## 4   1  1  1  2  1  2
-## 5   3  3  3  1  1  3
-## 6   1  1  1  2  2  1
-## 7   1  3  1  2  1  1
-## 8   3  3  3  2  2  2
-## 9   1  2  1  3  3  3
-## 10  2  2  3  1  1  1
+## 1   1  2  2  3  3  3
+## 2   2  2  3  3  3  3
+## 3   1  1  2  3  2  2
+## 4   3  3  3  3  3  3
+## 5   2  3  3  1  1  1
+## 6   2  1  1  3  2  2
+## 7   1  1  1  3  2  3
+## 8   2  3  2  3  2  3
+## 9   3  3  2  3  3  3
+## 10  3  3  3  2  3  3
 ```
 ]
 ]
@@ -331,7 +427,7 @@ summary(.fit, fit.measures=TRUE)
 ```
 
 ```
-## lavaan 0.6-8 ended normally after 25 iterations
+## lavaan 0.6-8 ended normally after 22 iterations
 ## 
 ##   Estimator                                         ML
 ##   Optimization method                           NLMINB
@@ -341,40 +437,40 @@ summary(.fit, fit.measures=TRUE)
 ##                                                       
 ## Model Test User Model:
 ##                                                       
-##   Test statistic                                 4.726
+##   Test statistic                                13.957
 ##   Degrees of freedom                                 8
-##   P-value (Chi-square)                           0.786
+##   P-value (Chi-square)                           0.083
 ## 
 ## Model Test Baseline Model:
 ## 
-##   Test statistic                               428.306
+##   Test statistic                               484.121
 ##   Degrees of freedom                                15
 ##   P-value                                        0.000
 ## 
 ## User Model versus Baseline Model:
 ## 
-##   Comparative Fit Index (CFI)                    1.000
-##   Tucker-Lewis Index (TLI)                       1.015
+##   Comparative Fit Index (CFI)                    0.987
+##   Tucker-Lewis Index (TLI)                       0.976
 ## 
 ## Loglikelihood and Information Criteria:
 ## 
-##   Loglikelihood user model (H0)              -1259.433
-##   Loglikelihood unrestricted model (H1)      -1257.070
+##   Loglikelihood user model (H0)              -1224.115
+##   Loglikelihood unrestricted model (H1)      -1217.136
 ##                                                       
-##   Akaike (AIC)                                2544.866
-##   Bayesian (BIC)                              2584.004
-##   Sample-size adjusted Bayesian (BIC)         2542.862
+##   Akaike (AIC)                                2474.230
+##   Bayesian (BIC)                              2513.368
+##   Sample-size adjusted Bayesian (BIC)         2472.225
 ## 
 ## Root Mean Square Error of Approximation:
 ## 
-##   RMSEA                                          0.000
+##   RMSEA                                          0.070
 ##   90 Percent confidence interval - lower         0.000
-##   90 Percent confidence interval - upper         0.064
-##   P-value RMSEA &lt;= 0.05                          0.912
+##   90 Percent confidence interval - upper         0.131
+##   P-value RMSEA &lt;= 0.05                          0.253
 ## 
 ## Standardized Root Mean Square Residual:
 ## 
-##   SRMR                                           0.026
+##   SRMR                                           0.040
 ## 
 ## Parameter Estimates:
 ## 
@@ -386,28 +482,28 @@ summary(.fit, fit.measures=TRUE)
 ##                    Estimate  Std.Err  z-value  P(&gt;|z|)
 ##   F1 =~                                               
 ##     X1                1.000                           
-##     X2                0.992    0.101    9.780    0.000
-##     X3                1.150    0.110   10.498    0.000
+##     X2                0.829    0.070   11.820    0.000
+##     X3                0.986    0.077   12.766    0.000
 ##   F2 =~                                               
 ##     X4                1.000                           
-##     X5                0.995    0.100    9.929    0.000
-##     X6                0.982    0.101    9.756    0.000
+##     X5                1.011    0.109    9.309    0.000
+##     X6                0.908    0.102    8.920    0.000
 ## 
 ## Covariances:
 ##                    Estimate  Std.Err  z-value  P(&gt;|z|)
 ##   F1 ~~                                               
-##     F2                0.423    0.106    3.991    0.000
+##     F2                0.656    0.129    5.105    0.000
 ## 
 ## Variances:
 ##                    Estimate  Std.Err  z-value  P(&gt;|z|)
-##    .X1                0.486    0.083    5.879    0.000
-##    .X2                0.593    0.091    6.496    0.000
-##    .X3                0.378    0.090    4.188    0.000
-##    .X4                0.597    0.102    5.825    0.000
-##    .X5                0.486    0.093    5.205    0.000
-##    .X6                0.569    0.098    5.791    0.000
-##     F1                0.901    0.162    5.571    0.000
-##     F2                1.071    0.195    5.486    0.000
+##    .X1                0.389    0.078    4.988    0.000
+##    .X2                0.463    0.070    6.594    0.000
+##    .X3                0.422    0.079    5.334    0.000
+##    .X4                0.643    0.105    6.146    0.000
+##    .X5                0.454    0.090    5.047    0.000
+##    .X6                0.542    0.087    6.207    0.000
+##     F1                1.280    0.198    6.464    0.000
+##     F2                0.954    0.184    5.181    0.000
 ```
 ]
 ]
@@ -462,7 +558,7 @@ analysis &lt;- function(.data) {
 .scroll-box-18[
 
 ```
-## lavaan 0.6-8 ended normally after 34 iterations
+## lavaan 0.6-8 ended normally after 41 iterations
 ## 
 ##   Estimator                                         ML
 ##   Optimization method                           NLMINB
@@ -472,40 +568,40 @@ analysis &lt;- function(.data) {
 ##                                                       
 ## Model Test User Model:
 ##                                                       
-##   Test statistic                                 4.006
+##   Test statistic                                13.661
 ##   Degrees of freedom                                 8
-##   P-value (Chi-square)                           0.857
+##   P-value (Chi-square)                           0.091
 ## 
 ## Model Test Baseline Model:
 ## 
-##   Test statistic                                38.273
+##   Test statistic                                48.973
 ##   Degrees of freedom                                15
-##   P-value                                        0.001
+##   P-value                                        0.000
 ## 
 ## User Model versus Baseline Model:
 ## 
-##   Comparative Fit Index (CFI)                    1.000
-##   Tucker-Lewis Index (TLI)                       1.322
+##   Comparative Fit Index (CFI)                    0.833
+##   Tucker-Lewis Index (TLI)                       0.688
 ## 
 ## Loglikelihood and Information Criteria:
 ## 
-##   Loglikelihood user model (H0)                -84.318
-##   Loglikelihood unrestricted model (H1)        -82.315
+##   Loglikelihood user model (H0)                -82.689
+##   Loglikelihood unrestricted model (H1)        -75.859
 ##                                                       
-##   Akaike (AIC)                                 194.636
-##   Bayesian (BIC)                               198.570
-##   Sample-size adjusted Bayesian (BIC)          159.626
+##   Akaike (AIC)                                 191.379
+##   Bayesian (BIC)                               195.312
+##   Sample-size adjusted Bayesian (BIC)          156.368
 ## 
 ## Root Mean Square Error of Approximation:
 ## 
-##   RMSEA                                          0.000
+##   RMSEA                                          0.266
 ##   90 Percent confidence interval - lower         0.000
-##   90 Percent confidence interval - upper         0.202
-##   P-value RMSEA &lt;= 0.05                          0.865
+##   90 Percent confidence interval - upper         0.500
+##   P-value RMSEA &lt;= 0.05                          0.101
 ## 
 ## Standardized Root Mean Square Residual:
 ## 
-##   SRMR                                           0.132
+##   SRMR                                           0.166
 ## 
 ## Parameter Estimates:
 ## 
@@ -517,28 +613,28 @@ analysis &lt;- function(.data) {
 ##                    Estimate  Std.Err  z-value  P(&gt;|z|)
 ##   F1 =~                                               
 ##     X1                1.000                           
-##     X2                0.372    0.263    1.411    0.158
-##     X3                0.535    0.284    1.885    0.059
+##     X2                1.734    0.877    1.979    0.048
+##     X3                1.139    0.591    1.928    0.054
 ##   F2 =~                                               
 ##     X4                1.000                           
-##     X5                1.207    0.340    3.554    0.000
-##     X6                1.074    0.429    2.503    0.012
+##     X5                0.573    0.207    2.760    0.006
+##     X6                0.684    0.252    2.714    0.007
 ## 
 ## Covariances:
 ##                    Estimate  Std.Err  z-value  P(&gt;|z|)
 ##   F1 ~~                                               
-##     F2               -0.704    0.482   -1.461    0.144
+##     F2               -0.606    0.469   -1.294    0.196
 ## 
 ## Variances:
 ##                    Estimate  Std.Err  z-value  P(&gt;|z|)
-##    .X1               -0.892    1.052   -0.848    0.396
-##    .X2                1.434    0.625    2.293    0.022
-##    .X3                1.130    0.557    2.028    0.043
-##    .X4                0.278    0.217    1.282    0.200
-##    .X5                0.253    0.280    0.902    0.367
-##    .X6                1.165    0.576    2.023    0.043
-##     F1                2.652    1.186    2.236    0.025
-##     F2                0.932    0.556    1.676    0.094
+##    .X1                1.353    0.650    2.083    0.037
+##    .X2                0.394    0.566    0.697    0.486
+##    .X3                0.485    0.322    1.508    0.132
+##    .X4               -0.332    0.336   -0.988    0.323
+##    .X5                0.605    0.274    2.207    0.027
+##    .X6                0.899    0.405    2.218    0.027
+##     F1                0.737    0.750    0.982    0.326
+##     F2                1.692    0.662    2.555    0.011
 ```
 ]
 ]
@@ -578,13 +674,13 @@ extracted &lt;- extractEst(.fit)
 
 ```
 ##     type    est pvalue
-## 1 F1=~X2  0.372  0.158
-## 2 F1=~X3  0.535  0.059
-## 3 F2=~X5  1.207  0.000
-## 4 F2=~X6  1.074  0.012
-## 5 F1~~F2 -0.704  0.144
-## 6 F1~~F1  2.652  0.025
-## 7 F2~~F2  0.932  0.094
+## 1 F1=~X2  1.734  0.048
+## 2 F1=~X3  1.139  0.054
+## 3 F2=~X5  0.573  0.006
+## 4 F2=~X6  0.684  0.007
+## 5 F1~~F2 -0.606  0.196
+## 6 F1~~F1  0.737  0.326
+## 7 F2~~F2  1.692  0.011
 ```
 ]
 ]
@@ -22877,6 +22973,21 @@ sim_result &lt;- runSimulation(condition_list)
 ## calculate outcomes
 
 .panelset[
+
+.panel[.panel-name[outcome]
+
+## Accuracy
+`$$\text{Bias=}\sum(\hat{\theta}-\theta)/N$$`
+`$$\text{RMSE=}\sqrt{\sum(\hat{\theta}-\theta)^2/N}$$`
+
+## Power &amp; Type I error
+
+- when covariance = 0, the replications of being significant / total replication
+- when covariance = 0.5, the replications of being significant / total replication
+
+]
+
+
 .panel[.panel-name[function]
 
 .scroll-box-18[
@@ -23033,7 +23144,7 @@ typeierror_p &lt;- makePlot(power_res, what = "typeIerror", font_size = 12)
 
 
 
-&lt;img src="xaringan_presentation_files/figure-html/unnamed-chunk-28-1.png" width="80%" height="30%" /&gt;
+&lt;img src="xaringan_presentation_files/figure-html/unnamed-chunk-30-1.png" width="80%" height="30%" /&gt;
 
 
 
@@ -23041,8 +23152,28 @@ typeierror_p &lt;- makePlot(power_res, what = "typeIerror", font_size = 12)
 # Accuracy
 
 .scroll-box-20[
-&lt;img src="xaringan_presentation_files/figure-html/unnamed-chunk-29-1.png" width="100%" height="30%" /&gt;
+&lt;img src="xaringan_presentation_files/figure-html/unnamed-chunk-31-1.png" width="100%" height="30%" /&gt;
 ]
+
+
+---
+
+# push to github
+
+- commit -&gt; push (how to use branch?)
+- install package
+
+
+---
+
+# Run simulation
+
+
+
+
+
+
+
 
 
 
